crates/types/tests/compile_fail/sub_different_dims.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/sub_different_dims.rs:9:17
  |
9 |     let _ = p - d;
  |                 ^ expected `UTerm`, found `UInt<UTerm, B1>`
  |
  = note: expected struct `Dim<f64, PInt<UInt<UTerm, B1>>, NInt<UInt<UTerm, B1>>, NInt<UInt<UInt<UTerm, B1>, B0>>>`
             found struct `Dim<f64, PInt<UInt<UTerm, B1>>, NInt<UInt<UInt<UTerm, B1>, B1>>, Z0>`
